--- a/index.html
+++ b/index.html
@@ -3,45 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-    <link rel="stylesheet"href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet"href="node_modules/bootstrap-icons/font/bootstrap-icons.css"/>
+
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="scss/main.css" />
 
     <title>Document</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Lila design Agencyyy</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link "  href="/">Accueil</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Galerie</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-          </li>
-        <li><button class="btn btn-primary">Devis</button></li>
-      </ul>
-    </div>
-  </div>
-</nav></header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Lila design Agencyyy</a>
+
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Accueil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Galerie</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <button class="btn btn-primary ms-lg-3">Devis</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <main id="main-page">
       <!--Le Contenue de la page sera injectée ici-->
     </main>
 
-    <footer>Le footer de mon site</footer>
+    <footer class="bg-dark text-white footer">
+      <div class="container py-4">
+        <div class="row text-center">
+          <div class="col-12">
+            <h3>Contact</h3>
+            <p>
+              Téléphone : 07 45 88 03 64 <br />
+              Email : Liladesignagencyyy@gmail.com <br />
+              Adresse : 123 rue de la créativité, Paris, France <br />
+              Instagram : @liladesignagencyyy <br />
+              Facebook : Lila Design Agencyyy <br />
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="module" src="router/router.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
