--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,39 +14,44 @@
     />
     <link rel="stylesheet" href="scss/main.css" />
 
-    <title>Document</title>
+    <title>LDA</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lila design Agencyyy</a>
+          <a class="navbar-brand" href="/">LDA</a>
 
           <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="/">Accueil</a>
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Galerie</a>
+                <a class="nav-link" href="/galerie">Galerie</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
               </li>
+
               <li class="nav-item">
-                <button class="btn btn-primary ms-lg-3">Devis</button>
+                <button class="btn btn-primary ms-lg-3">
+                  Demande de devis
+                </button>
               </li>
             </ul>
           </div>
@@ -59,16 +64,14 @@
     </main>
 
     <footer class="bg-dark text-white footer">
-      <div class="container py-4">
-        <div class="row text-center">
-          <div class="col-12">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col-12 col-lg-4">
             <h3>Contact</h3>
             <p>
-              Téléphone : 07 45 88 03 64 <br />
-              Email : Liladesignagencyyy@gmail.com <br />
-              Adresse : 123 rue de la créativité, Paris, France <br />
-              Instagram : @liladesignagencyyy <br />
-              Facebook : Lila Design Agencyyy <br />
+              07 45 88 03 64 <br />
+              Liladesignagencyyy@gmail.com <br />
+              123 rue de la créativité, Paris, France <br />
             </p>
           </div>
         </div>
