--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">LDA</a>
+          <a class="navbar-brand" href="/">
+            <img src="/images/LOGO.png" alt="Logo" class="logo-navbar" />
+          </a>
 
           <button
             class="navbar-toggler"
@@ -49,9 +51,13 @@
               </li>
 
               <li class="nav-item">
-                <button class="btn btn-primary ms-lg-3">
-                  Demande de devis
-                </button>
+                <a class="nav-link" href="#">Demande de devis</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Mon compte</a>
+              </li>
+              <li class="nav-item">
+                <a href="/signin" class="btn btn-primary">Connexion</a>
               </li>
             </ul>
           </div>
