--- a/pages/404.html
+++ b/pages/404.html
@@ -1,5 +1,9 @@
-<div>
-  <h1>404 -Page introuvable</h1>
-  <p>OUPSSSSSSS !!!!</p>
-  <p><a href="/">Retour à l'acceuil</a></p>
+<div class="hero-scene text-center text-white">
+  <div class="hero-scene-content">
+    <p>OUPSSSS ERROR 404</p>
+
+    <h1>Page introuvable</h1>
+
+    <button class="btn btn-primary">Retour à l'accueil</button>
+  </div>
 </div>
