--- a/pages/signin.html
+++ b/pages/signin.html
@@ -9,7 +9,12 @@
   <form class="mb-5 pt-5 d-flex flex-column align-items-center">
     <div class="mb-3">
       <label for="EmailInput" class="form-label">Email</label>
-      <input type="email" class="form-control" id="EmailInput" />
+      <input
+        type="email"
+        class="form-control"
+        id="EmailInput"
+        placeholder="test@mail.fr"
+      />
     </div>
     <div class="mb-3">
       <label for="PasswordInput" class="form-label">Mot de passe</label>
@@ -18,7 +23,9 @@
 
     <div class="d-flex gap-3">
       <button class="btn btn-primary">Connexion</button>
-      <button class="btn btn-secondary">Inscription</button>
     </div>
   </form>
+  <div class="container text-center mb-5">
+    <a href="/signup ">Vous n'avez pas de compte ? Inscrivez-vous !</a>
+  </div>
 </div>
