--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container">
-  <div class="row row-cols-2 row-cols-lg-3">
+  <div class="row row-cols-2 row-cols-lg-3 g-2 g-md-3">
     <div class="col p-3">
       <div class="image-card text-white">
         <img src="../images/baby.jpg" class="rounded w-100" />
