--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a class="nav-link" href="#">Demande de devis</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Mon compte</a>
+                <a class="nav-link" href="/account">Mon compte</a>
               </li>
               <li class="nav-item">
                 <a href="/signin" class="btn btn-primary">Connexion</a>
