--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -9,6 +9,10 @@
 </div>
 
 <div class="container">
+  <div class="text-center pt-5 mb-5">
+    <button class="btn btn-primary">Ajouter une Photo</button>
+  </div>
+
   <div class="row row-cols-2 row-cols-lg-3 g-2 g-md-3">
     <div class="col p-3">
       <div class="image-card text-white">
@@ -46,5 +50,8 @@
         <p class="titre-image">Titre</p>
       </div>
     </div>
+  </div>
+  <div class="text-center pt-5 mb-5">
+    <button href="#" class="btn btn-primary">Faire mon devis</button>
   </div>
 </div>
