--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -18,6 +18,13 @@
       <div class="image-card text-white">
         <img src="../images/baby.jpg" class="rounded w-100" />
         <p class="titre-image">Titre</p>
+        <div class="action-image-buttons">
+          <button type="button" class="btn btn-outline-light">
+            <i class="bi bi-pencil-square"></i></button
+          ><button type="button" class="btn btn-outline-light">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
       </div>
     </div>
     <div class="col p-3">
