--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- ✅ Bootstrap depuis node_modules avec le bon chemin -->
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap-icons/font/bootstrap-icons.css"
+      href="../node_modules/bootstrap-icons/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="scss/main.css" />
 
-    <title>LDA</title>
+    <!-- ✅ Votre CSS personnalisé -->
+    <link rel="stylesheet" href="../css/main.css" />
+
+    <title>Lila Design Agency</title>
   </head>
   <body>
     <header>
