--- a/pages/404.html
+++ b/pages/404.html
@@ -1,9 +1,33 @@
-<div class="hero-scene text-center text-white">
-  <div class="hero-scene-content">
-    <p>OUPSSSS ERROR 404</p>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <h1>Page introuvable</h1>
+    <!-- ✅ Bootstrap depuis node_modules avec le bon chemin -->
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    
+    <!-- ✅ Votre CSS personnalisé -->
+    <link rel="stylesheet" href="../css/main.css" />
+    
+    <title>Lila Design Agency</title>
+</head>
 
-    <button class="btn btn-primary">Retour à l'accueil</button>
-  </div>
-</div>
+    <div class="hero-scene text-center text-white">
+      <div class="hero-scene-content">
+        <p>OUPSSSS ERROR 404</p>
+
+        <h1>Page introuvable</h1>
+
+        <button class="btn btn-primary">Retour à l'accueil</button>
+      </div>
+    </div>
+  </head>
+</html>
