--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -1,64 +1,87 @@
-<div class="hero-scene text-center text-white">
-  <div class="hero-scene-content">
-    <p>Des décors qui racontent votre histoire</p>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <h1>Galerie</h1>
+    <!-- ✅ Bootstrap depuis node_modules avec le bon chemin -->
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    
+    <!-- ✅ Votre CSS personnalisé -->
+    <link rel="stylesheet" href="../css/main.css" />
+    
+    <title>Lila Design Agency</title>
+</head>
+    <div class="hero-scene text-center text-white">
+      <div class="hero-scene-content">
+        <p>Des décors qui racontent votre histoire</p>
 
-    <button class="btn btn-primary">Demande de devis</button>
-  </div>
-</div>
+        <h1>Galerie</h1>
 
-<div class="container">
-  <div class="text-center pt-5 mb-5">
-    <button class="btn btn-primary">Ajouter une Photo</button>
-  </div>
+        <button class="btn btn-primary">Demande de devis</button>
+      </div>
+    </div>
 
-  <div class="row row-cols-2 row-cols-lg-3 g-2 g-md-3">
-    <div class="col p-3">
-      <div class="image-card text-white">
-        <img src="../images/baby.jpg" class="rounded w-100" />
-        <p class="titre-image">Titre</p>
-        <div class="action-image-buttons">
-          <button type="button" class="btn btn-outline-light">
-            <i class="bi bi-pencil-square"></i></button
-          ><button type="button" class="btn btn-outline-light">
-            <i class="bi bi-trash"></i>
-          </button>
+    <div class="container">
+      <div class="text-center pt-5 mb-5">
+        <button class="btn btn-primary">Ajouter une Photo</button>
+      </div>
+
+      <div class="row row-cols-2 row-cols-lg-3 g-2 g-md-3">
+        <div class="col p-3">
+          <div class="image-card text-white">
+            <img src="../images/baby.jpg" class="rounded w-100" />
+            <p class="titre-image">Titre</p>
+            <div class="action-image-buttons">
+              <button type="button" class="btn btn-outline-light">
+                <i class="bi bi-pencil-square"></i></button
+              ><button type="button" class="btn btn-outline-light">
+                <i class="bi bi-trash"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col p-3">
+          <div class="image-card text-white">
+            <img src="../images/baby.jpg" class="rounded w-100" />
+            <p class="titre-image">Titre</p>
+          </div>
+        </div>
+        <div class="col p-3">
+          <div class="image-card text-white">
+            <img src="../images/baby.jpg" class="rounded w-100" />
+            <p class="titre-image">Titre</p>
+          </div>
+        </div>
+        <div class="col p-3">
+          <div class="image-card text-white">
+            <img src="../images/baby.jpg" class="rounded w-100" />
+            <p class="titre-image">Titre</p>
+          </div>
+        </div>
+        <div class="col p-3">
+          <div class="image-card text-white">
+            <img src="../images/baby.jpg" class="rounded w-100" />
+            <p class="titre-image">Titre</p>
+          </div>
+        </div>
+        <div class="col p-3">
+          <div class="image-card text-white">
+            <img src="../images/baby.jpg" class="rounded w-100" />
+            <p class="titre-image">Titre</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col p-3">
-      <div class="image-card text-white">
-        <img src="../images/baby.jpg" class="rounded w-100" />
-        <p class="titre-image">Titre</p>
+      <div class="text-center pt-5 mb-5">
+        <button href="#" class="btn btn-primary">Faire mon devis</button>
       </div>
     </div>
-    <div class="col p-3">
-      <div class="image-card text-white">
-        <img src="../images/baby.jpg" class="rounded w-100" />
-        <p class="titre-image">Titre</p>
-      </div>
-    </div>
-    <div class="col p-3">
-      <div class="image-card text-white">
-        <img src="../images/baby.jpg" class="rounded w-100" />
-        <p class="titre-image">Titre</p>
-      </div>
-    </div>
-    <div class="col p-3">
-      <div class="image-card text-white">
-        <img src="../images/baby.jpg" class="rounded w-100" />
-        <p class="titre-image">Titre</p>
-      </div>
-    </div>
-    <div class="col p-3">
-      <div class="image-card text-white">
-        <img src="../images/baby.jpg" class="rounded w-100" />
-        <p class="titre-image">Titre</p>
-      </div>
-    </div>
-  </div>
-  <div class="text-center pt-5 mb-5">
-    <button href="#" class="btn btn-primary">Faire mon devis</button>
-  </div>
-</div>
+  </head>
+</html>
