--- a/pages/auth/editPassword.html
+++ b/pages/auth/editPassword.html
@@ -1,49 +1,75 @@
-<div class="hero-scene text-center text-white">
-  <div class="hero-scene-content">
-    <p>Des décors qui racontent votre histoire</p>
-    <h1>Modiffier mot de passe</h1>
-  </div>
-</div>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<div class="container">
-  <form class="col-12 col-md-8 col-lg-6 mx-auto pt-5">
-    <h3 class="mb-4">S'inscrire</h3>
+    <!-- ✅ Bootstrap depuis node_modules avec le bon chemin -->
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    
+    <!-- ✅ Votre CSS personnalisé -->
+    <link rel="stylesheet" href="../css/main.css" />
+    
+    <title>Lila Design Agency</title>
+</head>
 
-    <div class="mb-3">
-      <label for="PasswordInput" class="form-label">Mot de passe</label>
-      <input
-        type="password"
-        class="form-control"
-        id="PasswordInput"
-        placeholder="8 caractères minimum"
-        minlength="8"
-        required
-      />
+    <div class="hero-scene text-center text-white">
+      <div class="hero-scene-content">
+        <p>Des décors qui racontent votre histoire</p>
+        <h1>Modiffier mot de passe</h1>
+      </div>
     </div>
 
-    <div class="mb-3">
-      <label for="ValidatePasswordInput" class="form-label"
-        >Confirmez votre mot de passe</label
-      >
-      <input
-        type="password"
-        class="form-control"
-        id="ValidatePasswordInput"
-        placeholder="8 caractères minimum"
-        minlength="8"
-        required
-      />
-    </div>
+    <div class="container">
+      <form class="col-12 col-md-8 col-lg-6 mx-auto pt-5">
+        <h3 class="mb-4">S'inscrire</h3>
 
-    <div class="d-flex gap-5 align-items-center mb-5">
-      <button type="submit" class="btn btn-primary">
-        Changer mon mot de passe
-      </button>
-      <button type="button" class="btn btn-danger">Supprimer mon compte</button>
+        <div class="mb-3">
+          <label for="PasswordInput" class="form-label">Mot de passe</label>
+          <input
+            type="password"
+            class="form-control"
+            id="PasswordInput"
+            placeholder="8 caractères minimum"
+            minlength="8"
+            required
+          />
+        </div>
 
-      <a href="/signup" class="text-decoration-none"
-        >Modifier mes informations personnelles !</a
-      >
+        <div class="mb-3">
+          <label for="ValidatePasswordInput" class="form-label"
+            >Confirmez votre mot de passe</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            id="ValidatePasswordInput"
+            placeholder="8 caractères minimum"
+            minlength="8"
+            required
+          />
+        </div>
+
+        <div class="d-flex gap-5 align-items-center mb-5">
+          <button type="submit" class="btn btn-primary">
+            Changer mon mot de passe
+          </button>
+          <button type="button" class="btn btn-danger">
+            Supprimer mon compte
+          </button>
+
+          <a href="/signup" class="text-decoration-none"
+            >Modifier mes informations personnelles !</a
+          >
+        </div>
+      </form>
     </div>
-  </form>
-</div>
+  </head>
+</html>
