--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -1,40 +1,64 @@
-<div class="hero-scene text-center text-white">
-  <div class="hero-scene-content">
-    <p>Des décors qui racontent votre histoire</p>
-    <h1>Connexion</h1>
-  </div>
-</div>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<div class="container">
-  <form class="col-12 col-md-8 col-lg-6 mx-auto pt-5">
-    <h3 class="mb-4">Se connecter</h3>
-    <div class="mb-3">
-      <label for="EmailInput" class="form-label">Email</label>
-      <input
-        type="email"
-        class="form-control"
-        id="EmailInput"
-        placeholder="Votre adresse email"
-        required
-      />
+    <!-- ✅ Bootstrap depuis node_modules avec le bon chemin -->
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    
+    <!-- ✅ Votre CSS personnalisé -->
+    <link rel="stylesheet" href="../css/main.css" />
+    
+    <title>Lila Design Agency</title>
+</head>
+
+    <div class="hero-scene text-center text-white">
+      <div class="hero-scene-content">
+        <p>Des décors qui racontent votre histoire</p>
+        <h1>Connexion</h1>
+      </div>
     </div>
 
-    <div class="mb-3">
-      <label for="PasswordInput" class="form-label">Mot de passe</label>
-      <input
-        type="password"
-        class="form-control"
-        id="PasswordInput"
-        placeholder="Votre mot de passe"
-        required
-      />
-    </div>
+    <div class="container">
+      <form class="col-12 col-md-8 col-lg-6 mx-auto pt-5">
+        <h3 class="mb-4">Se connecter</h3>
+        <div class="mb-3">
+          <label for="EmailInput" class="form-label">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="EmailInput"
+            placeholder="Votre adresse email"
+            required
+          />
+        </div>
 
-    <div class="d-flex gap-5 align-items-center">
-      <button type="submit" class="btn btn-primary">Connexion</button>
-      <a href="/signup" class="text-decoration-none"
-        >Vous n'avez pas de compte ? Inscrivez-vous !</a
-      >
+        <div class="mb-3">
+          <label for="PasswordInput" class="form-label">Mot de passe</label>
+          <input
+            type="password"
+            class="form-control"
+            id="PasswordInput"
+            placeholder="Votre mot de passe"
+            required
+          />
+        </div>
+
+        <div class="d-flex gap-5 align-items-center">
+          <button type="submit" class="btn btn-primary">Connexion</button>
+          <a href="/signup" class="text-decoration-none"
+            >Vous n'avez pas de compte ? Inscrivez-vous !</a
+          >
+        </div>
+      </form>
     </div>
-  </form>
-</div>
+  </head>
+</html>
