--- a/pages/home.html
+++ b/pages/home.html
@@ -1,74 +1,98 @@
-<div class="hero-scene text-center text-white">
-  <div class="hero-scene-content">
-    <p>Des décors qui racontent votre histoire</p>
+<!doctype html>
+<html lang="fr">
+ <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <h1>Accueil</h1>
+    <!-- ✅ Bootstrap depuis node_modules avec le bon chemin -->
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    
+    <!-- ✅ Votre CSS personnalisé -->
+    <link rel="stylesheet" href="../css/main.css" />
+    
+    <title>Lila Design Agency</title>
+</head>
 
-    <button class="btn btn-primary">Demande de devis</button>
-  </div>
-</div>
+    <div class="hero-scene text-center text-white">
+      <div class="hero-scene-content">
+        <p>Des décors qui racontent votre histoire</p>
 
-<section>
-  <article>
-    <div class="container p-4">
-      <h2 class="text-center text-primary">Anniversaire</h2>
-      <div class="row row-cols-2 align-items-center">
-        <div class="col">
-          <p class="text-justify">
-            Chaque création est pensée sur-mesure pour refléter vos émotions et
-            sublimer vos événements. Nous transformons vos idées en décors
-            élégants et mémorables.
-          </p>
-        </div>
-        <div class="col-md-4">
-          <img class="w-100 rounded" src="../images/anniv.jpeg" />
-        </div>
-      </div>
-      <div class="text-center pt-4">
-        <a href="/galerie" class="btn btn-primary">Galerie</a>
+        <h1>Accueil</h1>
+
+        <button class="btn btn-primary">Demande de devis</button>
       </div>
     </div>
-  </article>
 
-  <article class="bg-dark text-white">
-    <div class="container p-4">
-      <h2 class="text-center text-primary">Mariage</h2>
-      <div class="row row-cols-2 align-items-center">
-        <div class="col-md-4">
-          <img class="w-100 rounded" src="../images/Mariage.jpeg" />
+    <section>
+      <article>
+        <div class="container p-4">
+          <h2 class="text-center text-primary">Anniversaire</h2>
+          <div class="row row-cols-2 align-items-center">
+            <div class="col">
+              <p class="text-justify">
+                Chaque création est pensée sur-mesure pour refléter vos émotions
+                et sublimer vos événements. Nous transformons vos idées en
+                décors élégants et mémorables.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <img class="w-100 rounded" src="../images/anniv.jpeg" />
+            </div>
+          </div>
+          <div class="text-center pt-4">
+            <a href="/galerie" class="btn btn-primary">Galerie</a>
+          </div>
         </div>
-        <div class="col">
-          <p class="text-justify">
-            Chaque création est pensée sur-mesure pour refléter vos émotions et
-            sublimer vos événements. Nous transformons vos idées en décors
-            élégants et mémorables.
-          </p>
-        </div>
-      </div>
-      <div class="text-center pt-4">
-        <a href="/galerie" class="btn btn-primary">Galerie</a>
-      </div>
-    </div>
-  </article>
+      </article>
 
-  <article>
-    <div class="container p-4">
-      <h2 class="text-center text-primary">Baby Shower</h2>
-      <div class="row row-cols-2 align-items-center">
-        <div class="col">
-          <p class="text-justify">
-            Chaque création est pensée sur-mesure pour refléter vos émotions et
-            sublimer vos événements. Nous transformons vos idées en décors
-            élégants et mémorables.
-          </p>
+      <article class="bg-dark text-white">
+        <div class="container p-4">
+          <h2 class="text-center text-primary">Mariage</h2>
+          <div class="row row-cols-2 align-items-center">
+            <div class="col-md-4">
+              <img class="w-100 rounded" src="../images/Mariage.jpeg" />
+            </div>
+            <div class="col">
+              <p class="text-justify">
+                Chaque création est pensée sur-mesure pour refléter vos émotions
+                et sublimer vos événements. Nous transformons vos idées en
+                décors élégants et mémorables.
+              </p>
+            </div>
+          </div>
+          <div class="text-center pt-4">
+            <a href="/galerie" class="btn btn-primary">Galerie</a>
+          </div>
         </div>
-        <div class="col-md-4">
-          <img class="w-100 rounded" src="../images/baby.jpg" />
+      </article>
+
+      <article>
+        <div class="container p-4">
+          <h2 class="text-center text-primary">Baby Shower</h2>
+          <div class="row row-cols-2 align-items-center">
+            <div class="col">
+              <p class="text-justify">
+                Chaque création est pensée sur-mesure pour refléter vos émotions
+                et sublimer vos événements. Nous transformons vos idées en
+                décors élégants et mémorables.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <img class="w-100 rounded" src="../images/baby.jpg" />
+            </div>
+          </div>
+          <div class="text-center pt-4">
+            <a href="/galerie" class="btn btn-primary">Galerie</a>
+          </div>
         </div>
-      </div>
-      <div class="text-center pt-4">
-        <a href="/galerie" class="btn btn-primary">Galerie</a>
-      </div>
-    </div>
-  </article>
-</section>
+      </article>
+    </section>
+  </head>
+</html>
