--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -20,14 +20,14 @@
     <title>Lila Design Agency</title>
 </head>
 <body>
-  -
+  
 <div class="hero-scene text-center text-white">
       <div class="hero-scene-content">
         <p>Des décors qui racontent votre histoire</p>
 
         <h1>Galerie</h1>
 
-        <button class="btn btn-primary">Demande de devis</button>
+        <a href="/alldevis" class="btn btn-primary">Demande de devis</a>
       </div>
     </div>
 
@@ -119,9 +119,7 @@
       </div>
     </div>
     </div>
-    </div><div class="text-center pt-5 mb-5">
-        <button href="#" class="btn btn-primary">Faire mon devis</button>
-      </div>
+    </div>
 
 <!-- Modal eDITION-->
 <div class="modal fade" id="EditionPhotoModal" tabindex="-1" aria-labelledby="EditionPhotoModalLabel" aria-hidden="true">
