--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Demande de devis</a>
+                <a class="nav-link" href="/alldevis">Demande de devis</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/account">Mon compte</a>
