--- a/pages/home.html
+++ b/pages/home.html
@@ -26,7 +26,7 @@
 
         <h1>Accueil</h1>
 
-        <button class="btn btn-primary">Demande de devis</button>
+        <a href="/alldevis" class="btn btn-primary">Demande de devis</a>
       </div>
     </div>
 
