--- a/pages/auth/signup.html
+++ b/pages/auth/signup.html
@@ -72,6 +72,7 @@
             minlength="8"
             required
           />
+          
         </div>
 
         <div class="mb-3">
@@ -84,12 +85,11 @@
             id="ValidatePasswordInput"
             placeholder="8 caractères minimum"
             minlength="8"
-            required
-          />
-        </div>
+            required>
+            
 
         <div class="d-flex gap-5 align-items-center mb-5">
-          <button type="submit" class="btn btn-primary">Inscription</button>
+          <button type="submit" class="btn btn-primary" id="btn-validation-inscription">Inscription</button>
           <a href="/signin" class="text-decoration-none"
             >Vous avez déjà un compte ? Connectez-vous ici !</a
           >
